# word-arena

./: .editorconfig  .gitattributes  .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md
.github/ISSUE_TEMPLATE/: disputed-word.yml
.github/workflows/: ci.yml  lexicon-release.yml
apps/cli/: Cargo.toml
apps/cli/src/: args.rs  bridge.rs  client.rs  config.rs  error.rs  lib.rs  main.rs
apps/cli/tests/: cli.rs
apps/cli/tests/snapshots/: auth.json  replay.json
apps/server/: Cargo.toml
apps/server/src/: agent_match.rs  lib.rs  main.rs  mcp.rs  mcp_resources.rs  mcp_tools.rs  runtime.rs  transport.rs
apps/server/tests/: transport.rs
apps/server/tests/snapshots/: mcp_client_contract_v1.json  mcp_competitive_tools_v1.sha256  mcp_stdio_scenarios_v1.json
contracts/: agent-authority-boundary-v1.json  agent-budget-v1.json  agent-driver-v1.json  agent-harnesses-v1.json  agent-manifest-v1.json  agent-run-telemetry-v1.json  agent-workspace-v1.json  exports-v1.json  job-queue-v1.json  ratings-v1.json  scheduler-controls-v1.json  statistics-v1.json  tournament-schedule-v1.json  web-api-v1.json
crates/agent-runtime/: Cargo.toml
crates/agent-runtime/src/: authority.rs  budget.rs  driver.rs  harness.rs  lib.rs  telemetry.rs  workspace.rs
crates/agent-runtime/tests/: authority.rs  budget.rs  driver.rs  harness.rs  manifest.rs  telemetry.rs  workspace.rs
crates/agent-runtime/tests/fixtures/: fake-harness
crates/application/: Cargo.toml
crates/application/src/: authority.rs  capability.rs  command.rs  error.rs  export.rs  job.rs  lib.rs  operations.rs  ports.rs  rating.rs  scheduler.rs  service.rs  statistics.rs  test_support.rs  tournament.rs
crates/application/tests/: application.rs  capabilities.rs  export.rs  job.rs  rating.rs  scheduler.rs  statistics.rs  tournament.rs
crates/application/tests/snapshots/: export.jsonl
crates/engine/: Cargo.toml
crates/engine/src/: error.rs  game.rs  language.rs  lexicon.rs  lib.rs  model.rs  random.rs  ruleset.rs  test_support.rs
crates/engine/tests/: baseline_matches.rs  game_actions.rs  lexicon_games.rs  projections.rs  public_replay.rs  rulesets.rs
crates/lexicon/: Cargo.toml
crates/lexicon-builder/: Cargo.toml
crates/lexicon-builder/src/: curation.rs  english.rs  error.rs  french.rs  french_policy.rs  hunspell.rs  hunspell_policy.rs  index.rs  lib.rs  main.rs  policy.rs  review.rs  scowl.rs  util.rs
crates/lexicon-builder/tests/: curation.rs  english.rs  french.rs  hunspell.rs  index.rs
crates/lexicon/src/: compatibility.rs  error.rs  index.rs  installed.rs  key.rs  lib.rs  manifest.rs  pack.rs  paths.rs
crates/lexicon/tests/: contract.rs  runtime.rs
crates/lexicon/tests/fixtures/en-v1/: SOURCE.md  lexicon.fst  manifest.toml
crates/lexicon/tests/fixtures/fr-v1/: LICENSE  SOURCE.md  THIRD_PARTY_NOTICES  lexicon.fst  manifest.toml
crates/lexicon/tests/fixtures/fr-v1/curation/: removals.toml
crates/lexicon/tests/fixtures/incompatible-format/: manifest.toml
crates/lexicon/tests/fixtures/malformed-unknown-field/: manifest.toml
crates/persistence/: Cargo.toml
crates/persistence/migrations/: 0001_core.sql  0002_operations.sql  0003_capability_agent_runs.sql  0004_reliability.sql  0005_agent_manifest_attribution.sql  0006_agent_budget_telemetry.sql  0007_agent_run_telemetry.sql  0008_tournament_schedules.sql  0009_jobs.sql  0010_scheduler_controls.sql  0011_ratings.sql  0012_statistics.sql  0013_local_agent_matches.sql  0014_four_player_seats.sql
crates/persistence/src/: agent_repository.rs  capability_repository.rs  job_repository.rs  lib.rs  local_match_repository.rs  migration.rs  rating_repository.rs  repository.rs  scheduler_repository.rs  statistics_repository.rs  tournament_repository.rs
crates/persistence/tests/: agent_attribution.rs  capabilities.rs  jobs.rs  ratings.rs  repository.rs  scheduler.rs  statistics.rs  tournaments.rs
docs/: AGENT_BUDGETS.md  AGENT_DRIVERS.md  AGENT_HARNESSES.md  AGENT_MANIFESTS.md  AGENT_MATCHES.md  AGENT_TELEMETRY.md  AGENT_WORKSPACES.md  API_V1.md  APPLICATION.md  BASELINE_MATCHES.md  CAPABILITIES.md  CLI.md  EXPORTS.md  JOBS.md  LEXICON_GAMEPLAY.md  LEXICON_V1_AUDIT.md  LOCAL_SETUP.md  MCP.md  MCP_CLIENTS.md  PERSISTENCE.md  PROJECTIONS.md  PROJECT_PLAN.md  QUALITY_GATES.md  RANDOMNESS.md  RATINGS.md  RELIABILITY.md  RULESETS.md  SCHEDULER.md  STATISTICS.md  TASKS.md  TOURNAMENTS.md  WEB.md
docs/decisions/: 0001-sqlite-sqlx.md  0002-rest-websocket-transport.md  0003-mcp-streamable-http.md  0004-agent-runtime-boundary.md
examples/agents/: claude-code-v1.json  cline-v1.json  codex-v1.json  generic-command-v1.json  pi-v1.json
lexicons/: .gitignore  CURATION.md  ENGLISH_BUILD.md  FRENCH_BUILD.md  HUNSPELL_BUILD.md  MULTILINGUAL_SOURCE_REVIEW.md  PACK_FORMAT.md  README.md  RELEASE_NOTES.md  RELEASING.md  THIRD_PARTY_NOTICES.md  registry.toml  release.toml  sources.toml
lexicons/curation/en-world-v1/: additions.toml  governance.toml  removals.toml
lexicons/curation/fr-v1/: additions.toml  governance.toml  removals.toml
lexicons/policies/: de-v1.toml  en-world-v1.toml  es-v1.toml  fr-v1.toml
lexicons/reviews/: de-v1.toml  es-v1.toml
rulesets/: classic-board-v1.toml  english-v1.toml  french-v1.toml
scripts/agents/: smoke-budgets.sh  smoke-harnesses.sh
scripts/mcp/: inspector-smoke.sh  verify-contract.sh
scripts/web/: verify-contract.sh
web/: README.md  THIRD_PARTY_NOTICES.md  biome.json  eslint.config.js  index.html  package.json  playwright.config.ts  tsconfig.test.json
web/e2e/: game-workspace.spec.ts
web/fixtures/: server.ts
web/src/: App.tsx  index.css  main.tsx  replay.ts  routes.ts
web/src/api/: client.ts  credentials.ts  decode.ts  query.ts  session.ts  types.ts  (+1 more)
web/test/: accessibility.test.tsx  api.test.ts  dom-interactions.test.tsx  game-components.test.tsx  replay.test.tsx  setup-dom.ts
xtask/: Cargo.toml
xtask/src/: artifact.rs  audit.rs  error.rs  install.rs  lib.rs  main.rs  registry.rs  release.rs  setup.rs  source_build.rs
xtask/tests/: local_setup.rs  repository_audit.rs
xtask/tests/support/: mod.rs
(+23 files in other folders)
