[workspace]
members = [
  "apps/server",
  "crates/engine",
  "crates/lexicon",
  "crates/lexicon-builder",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
authors = ["chainyo"]
edition = "2024"
rust-version = "1.95"
license = "MIT"
repository = "https://github.com/chainyo/word-arena"

[workspace.dependencies]
axum = "0.8.9"
flate2 = "1.1.9"
fst = "0.4.7"
quick-xml = "0.41.0"
semver = "1.0.28"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sha2 = "0.11.0"
tar = "0.4.46"
tempfile = "3.27.0"
thiserror = "2.0.18"
tokio = { version = "1.53.0", features = ["macros", "net", "rt-multi-thread", "signal"] }
toml = "1.1.3"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt"] }
unicode-normalization = "0.1.25"
zip = { version = "8.6.0", default-features = false, features = ["deflate-flate2"] }

[workspace.lints.rust]
missing_debug_implementations = "warn"
unsafe_code = "forbid"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
