[workspace]
members = [
  "apps/cli",
  "apps/server",
  "crates/agent-runtime",
  "crates/application",
  "crates/engine",
  "crates/lexicon",
  "crates/lexicon-builder",
  "crates/persistence",
  "xtask",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
authors = ["chainyo"]
edition = "2024"
rust-version = "1.95"
license = "MIT"
repository = "https://github.com/chainyo/word-arena"

[workspace.dependencies]
axum = { version = "0.8.9", features = ["ws"] }
flate2 = "1.1.9"
fst = "0.4.7"
futures-util = "0.3.33"
getrandom = "0.4.3"
hmac = "0.13.0"
proptest = "1.9.0"
quick-xml = "0.41.0"
reqwest = { version = "0.13.4", default-features = false, features = ["json", "rustls", "stream"] }
rmcp = { version = "2.2.0", default-features = false, features = ["server", "transport-streamable-http-server"] }
schemars = "1.2.1"
semver = "1.0.28"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sha2 = "0.11.0"
sqlx = { version = "0.9.0", default-features = false, features = ["migrate", "runtime-tokio", "sqlite-bundled"] }
tar = "0.4.46"
tempfile = "3.27.0"
thiserror = "2.0.18"
tokio = { version = "1.53.0", features = ["io-std", "io-util", "macros", "net", "rt-multi-thread", "signal", "sync", "time"] }
tokio-util = "0.7.18"
toml = "1.1.3"
tower = { version = "0.5.3", features = ["limit", "util"] }
tower-http = { version = "0.7.0", features = ["cors", "limit", "timeout", "trace"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt"] }
unicode-normalization = "0.1.25"
zip = { version = "8.6.0", default-features = false, features = ["deflate-flate2"] }
zspell = { version = "=0.5.5", features = ["zspell-unstable"] }

[workspace.lints.rust]
missing_debug_implementations = "warn"
unsafe_code = "forbid"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
