[package]
name = "xtask"
description = "Local setup, lexicon installation, and release build tasks for Word Arena"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
flate2.workspace = true
semver.workspace = true
serde.workspace = true
sha2.workspace = true
tar.workspace = true
tempfile.workspace = true
thiserror.workspace = true
toml.workspace = true
word-arena-engine = { path = "../crates/engine" }
word-arena-lexicon = { path = "../crates/lexicon" }
word-arena-lexicon-builder = { path = "../crates/lexicon-builder" }

[dev-dependencies]
fst.workspace = true
tokio.workspace = true
word-arena-server = { path = "../apps/server" }

[lints]
workspace = true
