[package]
name = "word-arena-cli"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "word-arena"
path = "src/main.rs"

[dependencies]
futures-util.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-util.workspace = true
toml.workspace = true

[dev-dependencies]
axum.workspace = true
tempfile.workspace = true

[lints]
workspace = true
