[package]
name = "word-arena-server"
description = "HTTP, WebSocket, and MCP host for Word Arena"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
axum.workspace = true
futures-util.workspace = true
getrandom.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
word-arena-application = { path = "../../crates/application" }
word-arena-engine = { path = "../../crates/engine" }
word-arena-lexicon = { path = "../../crates/lexicon" }
word-arena-persistence = { path = "../../crates/persistence" }

[dev-dependencies]
tempfile.workspace = true
tokio-tungstenite = "0.29.0"
word-arena-application = { path = "../../crates/application", features = ["test-support"] }

[lints]
workspace = true
