[package]
name = "word-arena-application"
description = "Transport-agnostic application use cases for Word Arena"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = []
test-support = []

[dependencies]
getrandom.workspace = true
hmac.workspace = true
serde.workspace = true
sha2.workspace = true
thiserror.workspace = true
word-arena-engine = { path = "../engine" }
word-arena-lexicon = { path = "../lexicon" }

[dev-dependencies]
serde_json.workspace = true
tokio.workspace = true

[lints]
workspace = true
