[package]
name = "word-arena-engine"
description = "Deterministic domain and rules engine for Word Arena"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = []
test-support = []

[dependencies]
serde.workspace = true
sha2.workspace = true
thiserror.workspace = true
toml.workspace = true
word-arena-lexicon = { path = "../lexicon" }

[dev-dependencies]
proptest.workspace = true
serde_json.workspace = true

[lints]
workspace = true
