[package]
name = "word-arena-lexicon-builder"
description = "Deterministic source importers for Word Arena lexicon packs"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
flate2.workspace = true
fst.workspace = true
quick-xml.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tar.workspace = true
tempfile.workspace = true
thiserror.workspace = true
toml.workspace = true
word-arena-lexicon = { path = "../lexicon" }
zip.workspace = true
zspell.workspace = true

[lints]
workspace = true
