[package]
name = "word-arena-lexicon"
description = "Versioned lexicon pack contracts and validation for Word Arena"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
fst.workspace = true
semver.workspace = true
serde.workspace = true
sha2.workspace = true
thiserror.workspace = true
toml.workspace = true
unicode-normalization.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
