[package]
name = "word-arena-persistence"
description = "SQLx SQLite adapters and migrations for Word Arena"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
thiserror.workspace = true
word-arena-application = { path = "../application" }
word-arena-engine = { path = "../engine" }
word-arena-lexicon = { path = "../lexicon" }

[dev-dependencies]
tempfile.workspace = true
tokio.workspace = true

[lints]
workspace = true
